--- a/notebooks/dibu.ipynb
+++ b/notebooks/dibu.ipynb
@@ -2,37 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "lex: tokens   = ['IDENTIFIER', 'STRING', 'NUMBER', 'KEY', 'COMMA', 'EQUALS', 'LBRACKET', 'RBRACKET', 'LPAREN', 'RPAREN', 'NEWLINE']\n",
-      "lex: literals = ''\n",
-      "lex: states   = {'INITIAL': 'inclusive'}\n",
-      "lex: Adding rule t_NUMBER -> '\\d+' (state 'INITIAL')\n",
-      "lex: Adding rule t_NEWLINE -> '\\n+' (state 'INITIAL')\n",
-      "lex: Adding rule t_IDENTIFIER -> '(size|rectangle|line|circle|ellipse|polyline|polygon|text)' (state 'INITIAL')\n",
-      "lex: Adding rule t_STRING -> '\\\"([^\\\\\\n]|(\\\\.))*?\\\"' (state 'INITIAL')\n",
-      "lex: Adding rule t_KEY -> '\\w[\\w\\d_-]*' (state 'INITIAL')\n",
-      "lex: Adding rule t_RPAREN -> '\\)' (state 'INITIAL')\n",
-      "lex: Adding rule t_RBRACKET -> '\\]' (state 'INITIAL')\n",
-      "lex: Adding rule t_LPAREN -> '\\(' (state 'INITIAL')\n",
-      "lex: Adding rule t_LBRACKET -> '\\[' (state 'INITIAL')\n",
-      "lex: Adding rule t_EQUALS -> '=' (state 'INITIAL')\n",
-      "lex: Adding rule t_COMMA -> ',' (state 'INITIAL')\n",
-      "lex: ==== MASTER REGEXS FOLLOW ====\n",
-      "lex: state 'INITIAL' : regex[0] = '(?P<t_NUMBER>\\d+)|(?P<t_NEWLINE>\\n+)|(?P<t_IDENTIFIER>(size|rectangle|line|circle|ellipse|polyline|polygon|text))|(?P<t_STRING>\\\"([^\\\\\\n]|(\\\\.))*?\\\")|(?P<t_KEY>\\w[\\w\\d_-]*)|(?P<t_RPAREN>\\))|(?P<t_RBRACKET>\\])|(?P<t_LPAREN>\\()|(?P<t_LBRACKET>\\[)|(?P<t_EQUALS>=)|(?P<t_COMMA>,)'\n",
-      "WARNING: Token 'NEWLINE' defined, but not used\n",
-      "WARNING: There is 1 unused token\n",
-      "Generating LALR tables\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "sys.path.append(\"..\")\n",
@@ -44,11 +18,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'<svg xmlns=\"http://www.w3.org/2000/svg\" version=\"1.1\" width=\"300\" height=\"100\">\\n<rect x=\"3\" y=\"4\" height=\"5\" width=\"3\"/>\\n</svg>'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from dibu import parser\n",
     "from dibu import lexer\n",
@@ -60,18 +45,53 @@
     "\n",
     "parser.parse(\n",
     "    ('size height=100, width=300'\n",
-    "     'rectangle height=3'\n",
+    "     'rectangle upper_left=(3,4), width=3, height=5'\n",
     "    )\n",
     ")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<?xml version=\"1.0\" ?>\n",
+      "<svg height=\"100\" version=\"1.1\" width=\"100\" xmlns=\"http://www.w3.org/2000/svg\">\n",
+      "\t\n",
+      "\n",
+      "\t<circle cx=\"50\" cy=\"50\" fill=\"red\" r=\"50\"/>\n",
+      "\t\n",
+      "\n",
+      "\t<circle cx=\"50\" cy=\"50\" fill=\"black\" r=\"25\"/>\n",
+      "\t\n",
+      "\n",
+      "</svg>\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "image/svg+xml": [
+       "<svg height=\"100\" version=\"1.1\" width=\"100\" xmlns=\"http://www.w3.org/2000/svg\">\n",
+       "<circle cx=\"50\" cy=\"50\" fill=\"red\" r=\"50\"/>\n",
+       "<circle cx=\"50\" cy=\"50\" fill=\"black\" r=\"25\"/>\n",
+       "</svg>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.SVG object>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
     "show('''\n",
@@ -83,31 +103,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<?xml version=\"1.0\" ?>\n",
+      "<svg height=\"200\" version=\"1.1\" width=\"200\" xmlns=\"http://www.w3.org/2000/svg\">\n",
+      "\t\n",
+      "\n",
+      "\t<rect fill=\"yellow\" height=\"200\" width=\"200\" x=\"0\" y=\"0\"/>\n",
+      "\t\n",
+      "\n",
+      "\t<polygon fill=\"none\" points=\"0,0 50,50 0,100\" stroke=\"black\" stroke-width=\"3\"/>\n",
+      "\t\n",
+      "\n",
+      "\t<polygon fill=\"none\" points=\"0,0 50,50 100,0\" stroke=\"black\" stroke-width=\"3\"/>\n",
+      "\t\n",
+      "\n",
+      "\t<polygon fill=\"none\" points=\"0,100 50,150 0,200\" stroke=\"black\" stroke-width=\"3\"/>\n",
+      "\t\n",
+      "\n",
+      "\t<polygon fill=\"none\" points=\"0,200 50,150 100,200\" stroke=\"black\" stroke-width=\"3\"/>\n",
+      "\t\n",
+      "\n",
+      "\t<polygon fill=\"none\" points=\"100,200 150,150 200,200\" stroke=\"black\" stroke-width=\"3\"/>\n",
+      "\t\n",
+      "\n",
+      "\t<polygon fill=\"none\" points=\"200,200 150,150 200,100\" stroke=\"black\" stroke-width=\"3\"/>\n",
+      "\t\n",
+      "\n",
+      "\t<polygon fill=\"none\" points=\"200,100 150,50 200,0\" stroke=\"black\" stroke-width=\"3\"/>\n",
+      "\t\n",
+      "\n",
+      "\t<polygon fill=\"none\" points=\"200,0 150,50 100,0\" stroke=\"black\" stroke-width=\"3\"/>\n",
+      "\t\n",
+      "\n",
+      "</svg>\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "image/svg+xml": [
+       "<svg height=\"200\" version=\"1.1\" width=\"200\" xmlns=\"http://www.w3.org/2000/svg\">\n",
+       "<rect fill=\"yellow\" height=\"200\" width=\"200\" x=\"0\" y=\"0\"/>\n",
+       "<polygon fill=\"none\" points=\"0,0 50,50 0,100\" stroke=\"black\" stroke-width=\"3\"/>\n",
+       "<polygon fill=\"none\" points=\"0,0 50,50 100,0\" stroke=\"black\" stroke-width=\"3\"/>\n",
+       "<polygon fill=\"none\" points=\"0,100 50,150 0,200\" stroke=\"black\" stroke-width=\"3\"/>\n",
+       "<polygon fill=\"none\" points=\"0,200 50,150 100,200\" stroke=\"black\" stroke-width=\"3\"/>\n",
+       "<polygon fill=\"none\" points=\"100,200 150,150 200,200\" stroke=\"black\" stroke-width=\"3\"/>\n",
+       "<polygon fill=\"none\" points=\"200,200 150,150 200,100\" stroke=\"black\" stroke-width=\"3\"/>\n",
+       "<polygon fill=\"none\" points=\"200,100 150,50 200,0\" stroke=\"black\" stroke-width=\"3\"/>\n",
+       "<polygon fill=\"none\" points=\"200,0 150,50 100,0\" stroke=\"black\" stroke-width=\"3\"/>\n",
+       "</svg>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.SVG object>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "show('''\n",
-    "    rectangle upper_left=(0,0), size=(200, 200), fill=\"yellow\"\n",
-    "    polygon points=[(0,0), (50, 50), (0, 100)], style=\"stroke: black; stroke-width: 3; fill: none;\" \n",
-    "    polygon points=[(0,0), (50, 50), (100, 0)], style=\"stroke: black; stroke-width: 3; fill: none;\" \n",
-    "    polygon points=[(0, 100), (50, 150), (0, 200)], style=\"stroke: black; stroke-width: 3; fill: none;\" \n",
-    "    polygon points=[(0, 200), (50, 150), (100, 200)], style=\"stroke: black; stroke-width: 3; fill: none;\" \n",
-    "    polygon points=[(100, 200), (150, 150), (200, 200)], style=\"stroke: black; stroke-width: 3; fill: none;\"   \n",
-    "    polygon points=[(200, 200), (150, 150), (200, 100)], style=\"stroke: black; stroke-width: 3; fill: none;\"\n",
-    "    polygon points=[(200, 100), (150, 50), (200, 0)], style=\"stroke: black; stroke-width: 3; fill: none;\"\n",
+    "    size height=200, width=200 \n",
+    "    rectangle upper_left=(0,0), width=200, height=200, fill=\"yellow\"\n",
+    "    polygon points=[(0,0), (50, 50), (0, 100)], stroke=\"black\", stroke-width=3, fill=\"none\" \n",
+    "    polygon points=[(0,0), (50, 50), (100, 0)], stroke=\"black\", stroke-width=3, fill=\"none\" \n",
+    "    polygon points=[(0, 100), (50, 150), (0, 200)], stroke=\"black\", stroke-width=3, fill=\"none\" \n",
+    "    polygon points=[(0, 200), (50, 150), (100, 200)], stroke=\"black\", stroke-width=3, fill=\"none\" \n",
+    "    polygon points=[(100, 200), (150, 150), (200, 200)], stroke=\"black\", stroke-width=3, fill=\"none\"   \n",
+    "    polygon points=[(200, 200), (150, 150), (200, 100)], stroke=\"black\", stroke-width=3, fill=\"none\"\n",
+    "    polygon points=[(200, 100), (150, 50), (200, 0)], stroke=\"black\", stroke-width=3, fill=\"none\"\n",
     "    \n",
-    "    polygon points=[(200, 0), (150, 50), (100, 0)], style=\"stroke: black; stroke-width: 3; fill: none;\"\n",
+    "    polygon points=[(200, 0), (150, 50), (100, 0)], stroke=\"black\", stroke-width=3, fill=\"none\"\n",
     "''')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -121,7 +214,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
