--- a/notebooks/dibu.ipynb
+++ b/notebooks/dibu.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -18,41 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'<svg xmlns=\"http://www.w3.org/2000/svg\" version=\"1.1\" width=\"300\" height=\"100\">\\n<rect x=\"3\" y=\"4\" height=\"5\" width=\"3\"/>\\n</svg>'"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from dibu import parser\n",
-    "from dibu import lexer\n",
-    "def show(dibu_prog):\n",
-    "    output = parse(dibu_prog)\n",
-    "    pretty_xml = xmlParse(output).toprettyxml()\n",
-    "    print(pretty_xml)\n",
-    "    return SVG(output)\n",
-    "\n",
-    "parser.parse(\n",
-    "    ('size height=100, width=300'\n",
-    "     'rectangle upper_left=(3,4), width=3, height=5'\n",
-    "    )\n",
-    ")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -61,16 +27,56 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "['<rect x=\"3\" y=\"4\" height=\"5\" width=\"3\"/>']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'<svg xmlns=\"http://www.w3.org/2000/svg\" version=\"1.1\" width=\"300\" height=\"100\"><rect x=\"3\" y=\"4\" height=\"5\" width=\"3\"/></svg>'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from dibu.parser import parse\n",
+    "def show(dibu_prog):\n",
+    "    output = parse(dibu_prog)\n",
+    "    pretty_xml = xmlParse(output).toprettyxml()\n",
+    "    print(pretty_xml)\n",
+    "    return SVG(output)\n",
+    "\n",
+    "parse(\n",
+    "    ('size height=100, width=300'\n",
+    "     'rectangle upper_left=(3,4), width=3, height=5'\n",
+    "    )\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "    size height=100, width=100\n",
+      "    circle center=(50, 50), radius=50, fill=\"red\"\n",
+      "    circle center=(50, 50), radius=25, fill=\"black\"\n",
+      "\n",
+      "['<circle cx=\"50\" cy=\"50\" r=\"50\" fill=\"red\"/>', '<circle cx=\"50\" cy=\"50\" r=\"25\" fill=\"black\"/>']\n",
       "<?xml version=\"1.0\" ?>\n",
       "<svg height=\"100\" version=\"1.1\" width=\"100\" xmlns=\"http://www.w3.org/2000/svg\">\n",
-      "\t\n",
-      "\n",
       "\t<circle cx=\"50\" cy=\"50\" fill=\"red\" r=\"50\"/>\n",
-      "\t\n",
-      "\n",
       "\t<circle cx=\"50\" cy=\"50\" fill=\"black\" r=\"25\"/>\n",
-      "\t\n",
-      "\n",
       "</svg>\n",
       "\n"
      ]
@@ -78,16 +84,13 @@
     {
      "data": {
       "image/svg+xml": [
-       "<svg height=\"100\" version=\"1.1\" width=\"100\" xmlns=\"http://www.w3.org/2000/svg\">\n",
-       "<circle cx=\"50\" cy=\"50\" fill=\"red\" r=\"50\"/>\n",
-       "<circle cx=\"50\" cy=\"50\" fill=\"black\" r=\"25\"/>\n",
-       "</svg>"
+       "<svg height=\"100\" version=\"1.1\" width=\"100\" xmlns=\"http://www.w3.org/2000/svg\"><circle cx=\"50\" cy=\"50\" fill=\"red\" r=\"50\"/><circle cx=\"50\" cy=\"50\" fill=\"black\" r=\"25\"/></svg>"
       ],
       "text/plain": [
        "<IPython.core.display.SVG object>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,89 +106,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<?xml version=\"1.0\" ?>\n",
-      "<svg height=\"200\" version=\"1.1\" width=\"200\" xmlns=\"http://www.w3.org/2000/svg\">\n",
-      "\t\n",
-      "\n",
-      "\t<rect fill=\"yellow\" height=\"200\" width=\"200\" x=\"0\" y=\"0\"/>\n",
-      "\t\n",
-      "\n",
-      "\t<polygon fill=\"none\" points=\"0,0 50,50 0,100\" stroke=\"black\" stroke-width=\"3\"/>\n",
-      "\t\n",
-      "\n",
-      "\t<polygon fill=\"none\" points=\"0,0 50,50 100,0\" stroke=\"black\" stroke-width=\"3\"/>\n",
-      "\t\n",
-      "\n",
-      "\t<polygon fill=\"none\" points=\"0,100 50,150 0,200\" stroke=\"black\" stroke-width=\"3\"/>\n",
-      "\t\n",
-      "\n",
-      "\t<polygon fill=\"none\" points=\"0,200 50,150 100,200\" stroke=\"black\" stroke-width=\"3\"/>\n",
-      "\t\n",
-      "\n",
-      "\t<polygon fill=\"none\" points=\"100,200 150,150 200,200\" stroke=\"black\" stroke-width=\"3\"/>\n",
-      "\t\n",
-      "\n",
-      "\t<polygon fill=\"none\" points=\"200,200 150,150 200,100\" stroke=\"black\" stroke-width=\"3\"/>\n",
-      "\t\n",
-      "\n",
-      "\t<polygon fill=\"none\" points=\"200,100 150,50 200,0\" stroke=\"black\" stroke-width=\"3\"/>\n",
-      "\t\n",
-      "\n",
-      "\t<polygon fill=\"none\" points=\"200,0 150,50 100,0\" stroke=\"black\" stroke-width=\"3\"/>\n",
-      "\t\n",
-      "\n",
-      "</svg>\n",
+      "ERROR:root:An unexpected error occurred while tokenizing input\n",
+      "The following traceback may be corrupted or invalid\n",
+      "The error message is: ('EOF in multi-line string', (1, 95))\n",
       "\n"
      ]
     },
     {
-     "data": {
-      "image/svg+xml": [
-       "<svg height=\"200\" version=\"1.1\" width=\"200\" xmlns=\"http://www.w3.org/2000/svg\">\n",
-       "<rect fill=\"yellow\" height=\"200\" width=\"200\" x=\"0\" y=\"0\"/>\n",
-       "<polygon fill=\"none\" points=\"0,0 50,50 0,100\" stroke=\"black\" stroke-width=\"3\"/>\n",
-       "<polygon fill=\"none\" points=\"0,0 50,50 100,0\" stroke=\"black\" stroke-width=\"3\"/>\n",
-       "<polygon fill=\"none\" points=\"0,100 50,150 0,200\" stroke=\"black\" stroke-width=\"3\"/>\n",
-       "<polygon fill=\"none\" points=\"0,200 50,150 100,200\" stroke=\"black\" stroke-width=\"3\"/>\n",
-       "<polygon fill=\"none\" points=\"100,200 150,150 200,200\" stroke=\"black\" stroke-width=\"3\"/>\n",
-       "<polygon fill=\"none\" points=\"200,200 150,150 200,100\" stroke=\"black\" stroke-width=\"3\"/>\n",
-       "<polygon fill=\"none\" points=\"200,100 150,50 200,0\" stroke=\"black\" stroke-width=\"3\"/>\n",
-       "<polygon fill=\"none\" points=\"200,0 150,50 100,0\" stroke=\"black\" stroke-width=\"3\"/>\n",
-       "</svg>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.SVG object>"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "SemanticException",
+     "evalue": "Line 2: Parameters ['width'] need to be defined for size",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mSemanticException\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-18-8d5236838269>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[0mpolygon\u001b[0m \u001b[0mpoints\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m200\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m100\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m150\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m50\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m200\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstroke\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"black\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstroke\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mwidth\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfill\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"none\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m     polygon points=[(200, 0), (150, 50), (100, 0)], stroke=\"black\", stroke-width=3, fill=\"none\"'''\n\u001b[0m\u001b[1;32m     13\u001b[0m   )\n",
+      "\u001b[0;32m<ipython-input-11-8edd905125b4>\u001b[0m in \u001b[0;36mshow\u001b[0;34m(dibu_prog)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mdibu\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparser\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mparse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mshow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdibu_prog\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0moutput\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mparse\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdibu_prog\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0mpretty_xml\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mxmlParse\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutput\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtoprettyxml\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpretty_xml\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/chcuneo/ThePost/Personal/Facu/tleng/tlen-tp1/dibu/parser.py\u001b[0m in \u001b[0;36mparse\u001b[0;34m(text, debug)\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0mlexer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlex\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlex\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdebug\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdebug\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0mparser\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0myacc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0myacc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdebug\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdebug\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m     \u001b[0mdocument\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mparser\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparse\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlexer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0mcanvas\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'<svg xmlns=\"http://www.w3.org/2000/svg\" version=\"1.1\">'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/chcuneo/ThePost/Personal/Facu/p3venv/lib/python3.5/site-packages/ply/yacc.py\u001b[0m in \u001b[0;36mparse\u001b[0;34m(self, input, lexer, debug, tracking, tokenfunc)\u001b[0m\n\u001b[1;32m    329\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparseopt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlexer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdebug\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtracking\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtokenfunc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    330\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 331\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparseopt_notrack\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlexer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdebug\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtracking\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtokenfunc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    332\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    333\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/chcuneo/ThePost/Personal/Facu/p3venv/lib/python3.5/site-packages/ply/yacc.py\u001b[0m in \u001b[0;36mparseopt_notrack\u001b[0;34m(self, input, lexer, debug, tracking, tokenfunc)\u001b[0m\n\u001b[1;32m   1116\u001b[0m                             \u001b[0;32mdel\u001b[0m \u001b[0msymstack\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mplen\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1117\u001b[0m                             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstate\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstate\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1118\u001b[0;31m                             \u001b[0mp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcallable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpslice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1119\u001b[0m                             \u001b[0;32mdel\u001b[0m \u001b[0mstatestack\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mplen\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1120\u001b[0m                             \u001b[0msymstack\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msym\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/chcuneo/ThePost/Personal/Facu/tleng/tlen-tp1/dibu/parser_rules.py\u001b[0m in \u001b[0;36mp_expression\u001b[0;34m(subexpressions)\u001b[0m\n\u001b[1;32m    105\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0munmet_requirements\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    106\u001b[0m         raise SemanticException(\n\u001b[0;32m--> 107\u001b[0;31m             \"Line {}: Parameters {} need to be defined for {}\".format( subexpressions.lexer.lineno, unmet_requirements, identifier))\n\u001b[0m\u001b[1;32m    108\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    109\u001b[0m     \u001b[0;31m# Check types and key validity\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mSemanticException\u001b[0m: Line 2: Parameters ['width'] need to be defined for size"
+     ]
     }
    ],
    "source": [
-    "show('''\n",
-    "    size height=200, width=200 \n",
+    "show(\n",
+    "    '''size height=200, width=200\n",
     "    rectangle upper_left=(0,0), width=200, height=200, fill=\"yellow\"\n",
-    "    polygon points=[(0,0), (50, 50), (0, 100)], stroke=\"black\", stroke-width=3, fill=\"none\" \n",
-    "    polygon points=[(0,0), (50, 50), (100, 0)], stroke=\"black\", stroke-width=3, fill=\"none\" \n",
-    "    polygon points=[(0, 100), (50, 150), (0, 200)], stroke=\"black\", stroke-width=3, fill=\"none\" \n",
-    "    polygon points=[(0, 200), (50, 150), (100, 200)], stroke=\"black\", stroke-width=3, fill=\"none\" \n",
-    "    polygon points=[(100, 200), (150, 150), (200, 200)], stroke=\"black\", stroke-width=3, fill=\"none\"   \n",
+    "    polygon points=[(0,0), (50, 50), (0, 100)], stroke=\"black\", stroke-width=3, fill=\"none\"\n",
+    "    polygon points=[(0,0), (50, 50), (100, 0)], stroke=\"black\", stroke-width=3, fill=\"none\"\n",
+    "    polygon points=[(0, 100), (50, 150), (0, 200)], stroke=\"black\", stroke-width=3, fill=\"none\"\n",
+    "    polygon points=[(0, 200), (50, 150), (100, 200)], stroke=\"black\", stroke-width=3, fill=\"none\"\n",
+    "    polygon points=[(100, 200), (150, 150), (200, 200)], stroke=\"black\", stroke-width=3, fill=\"none\"\n",
     "    polygon points=[(200, 200), (150, 150), (200, 100)], stroke=\"black\", stroke-width=3, fill=\"none\"\n",
     "    polygon points=[(200, 100), (150, 50), (200, 0)], stroke=\"black\", stroke-width=3, fill=\"none\"\n",
     "    \n",
-    "    polygon points=[(200, 0), (150, 50), (100, 0)], stroke=\"black\", stroke-width=3, fill=\"none\"\n",
-    "''')"
+    "    polygon points=[(200, 0), (150, 50), (100, 0)], stroke=\"black\", stroke-width=3, fill=\"none\"'''\n",
+    "  )"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
